refactor: restructure both skills to standard layout (seata-patterns style)
Both skills now follow skill-creator spec + progressive disclosure:
- SKILL.md slimmed to core (~100 lines): frontmatter with LLM-correction
  triggers, Capability Boundaries, top-8 error table, quick-reference,
  references navigation
- references/: detailed docs loaded on demand (pom-structure,
  version-matrix / branch-release)
- examples/: end-to-end creation walkthroughs
- assets/pom-template.xml: templates moved from root (output resources,
  not context)
- Removed redundant content from SKILL.md bodies (moved to references)